Create category filter links Using the  filter, I filtered through each category directly on the book reviews page to open a category page for each category

--- a/templates/add_review.html
+++ b/templates/add_review.html
@@ -40,8 +40,7 @@
                     <div class="input-field col s12">
                         <textarea id="review" name="review" class="validate tooltipped materialize-textarea"
                             minlength="120" data-position="bottom"
-                            data-tooltip="Add a paragraph or two reviewing the book" required>
-                            </textarea>
+                            data-tooltip="Add a paragraph or two reviewing the book" required></textarea>
                         <label for="review">Review</label>
                     </div>
                 </div>
