--- a/templates/individual-reviews.html
+++ b/templates/individual-reviews.html
@@ -16,91 +16,16 @@
   <div class="col m12 l5 xl4 center">
     <img class="book-review-image" src={{ind_book.image}}>
 
-
-    {% if ind_book.rating == "1" %}
-    <div class="star-input2 rate-padding2">
-
-
-      <input type="checkbox" name="rating" id="st5" title="5 stars" value="5" disabled />
-
-      <input type="checkbox" name="rating" id="st4" title="4 stars" value="4" disabled />
-      <label for="st4"></label>
-      <input type="checkbox" name="rating" id="st3" title="3 stars" value="3" disabled />
-      <label for="st3"></label>
-      <input type="checkbox" name="rating" title="2 stars" id="st2" value="2" disabled />
-      <label for="st2"></label>
-      <input type="checkbox" name="rating" title="1 star" id="st1" value="1" disabled checked />
-      <label for="st1"></label>
-    </div>
-    {% elif ind_book.rating == "2" %}
-    <div class="star-input2 rate-padding2">
-      <input type="checkbox" name="rating" id="st5" title="5 stars" value="5" disabled />
-      <label class="" for="st5"></label>
-      <input type="checkbox" name="rating" id="st4" title="4 stars" value="4" disabled />
-      <label class="" for="st4"></label>
-      <input type="checkbox" name="rating" id="st3" title="3 stars" value="3" disabled />
-      <label class="" for="st3"></label>
-      <input type="checkbox" name="rating" title="2 stars" id="st2" value="2" disabled checked />
-      <label class="" for="st2"></label>
-      <input type="checkbox" name="rating" title="1 star" id="st1" value="1" disabled checked />
-      <label class="" for="st1"></label>
-    </div>
-    {% elif ind_book.rating == "3" %}
-    <div class="star-input2  rate-padding2">
-      <input type="checkbox" name="rating" id="st5" title="5 stars" value="5" disabled />
-      <label for="st5"></label>
-      <input type="checkbox" name="rating" id="st4" title="4 stars" value="4" disabled />
-      <label for="st4"></label>
-      <input type="checkbox" name="rating" id="st3" title="3 stars" value="3" disabled checked />
-      <label for="st3"></label>
-      <input type="checkbox" name="rating" title="2 stars" id="st2" value="2" disabled checked />
-      <label for="st2"></label>
-      <input type="checkbox" name="rating" title="1 star" id="st1" value="1" disabled checked />
-      <label for="st1"></label>
-    </div>
-    {% elif ind_book.rating == "4" %}
-    <div class="star-input2 rate-padding2">
-      <input type="checkbox" class="" name="rating" id="st5" title="5 stars" value="5" disabled />
-      <label for="st5"></label>
-      <input type="checkbox" name="rating" id="st4" title="4 stars" value="4" checked disabled />
-      <label for="st4"></label>
-      <input type="checkbox" name="rating" id="st3" title="3 stars" value="3" checked disabled />
-      <label for="st3"></label>
-      <input type="checkbox" name="rating" title="2 stars" id="st2" value="2" checked disabled />
-      <label for="st2"></label>
-      <input type="checkbox" name="rating" title="1 star" id="st1" value="1" checked disabled />
-      <label for="st1"></label>
-    </div>
-    {% elif ind_book.rating == "5" %}
-    <div class="star-input2  rate-padding2">
-      <input type="checkbox" name="rating" id="st5" title="5 stars" value="5" checked disabled />
-      <label for="st5"></label>
-      <input type="checkbox" name="rating" id="st4" title="4 stars" value="4" checked disabled />
-      <label for="st4"></label>
-      <input type="checkbox" name="rating" id="st3" title="3 stars" value="3" checked disabled />
-      <label for="st3"></label>
-      <input type="checkbox" name="rating" title="2 stars" id="st2" value="2" checked disabled />
-      <label for="st2"></label>
-      <input type="checkbox" name="rating" title="1 star" id="st1" value="1" checked disabled />
-      <label for="st1"></label>
-    </div>
-
-    {% else %}
-    <div class="star-input2 rate-padding2">
-      <input type="checkbox" name="rating" id="st5" title="5 stars" value="5" disabled />
-      <label for="st5"></label>
-      <input type="checkbox" name="rating" id="st4" title="4 stars" value="4" disabled />
-      <label for="st4"></label>
-      <input type="checkbox" name="rating" id="st3" title="3 stars" value="3" disabled />
-      <label for="st3"></label>
-      <input type="checkbox" name="rating" title="2 stars" id="st2" value="2" disabled />
-      <label for="st2"></label>
-      <input type="checkbox" name="rating" title="1 star" id="st1" value="1" disabled />
-      <label for="st1"></label>
-    </div>
-    {% endif %}
+    {% include "rating-template.html" %}
+    
     <div class="center">
       <p>Revied by {{ind_book.created_by}}</p>
+     {% for category in ind_book.category_name %}
+     <div class="chip">
+      {{category}}
+      </div>
+      {% endfor %}
+     
     </div>
 
   </div>
