--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -54,126 +54,33 @@
 
                 <div class="row">
                     <div class="input-field col s5 l6">
+                        
                         <select name="category_name" multiple>
-                            {% for categories in categories %}
-                            {% if categories.category_name == book.category_name %}
-                            <option value="{{ get_category.category_name }}" selected>{{ get_category.category_name }}
+                            
+                            {% for category in categories %}
+                            {% if category.category_name == book.category_name %}
+                            <option value="{{category.category_name }}" selected>{{category.category_name }}
                             </option>
                             {% else %}
-                            <option value="{{ categories.category_name }}">{{ categories.category_name }}</option>
+                            <option value="{{ category.category_name }}">{{ category.category_name }}</option>
                             {% endif %}
                             {% endfor %}
+                            
                         </select>
+                       
                         <label>Categories</label>
+                
+                        
                     </div>
 
                     <div class="col s7 l6">
                         <br>
                         <!-- <label>Rate (Optional)</label> -->
                         <div class="star-input rate-padding required">
-                            {% if book.rating == "1" %}
-                            <input type="checkbox" class="required" name="rating" id="st5" title="5 stars" value="5"
-                                required />
-                            <label for="st5"></label>
-                            <input type="checkbox" class="required" name="rating" id="st4" title="4 stars" value="4"
-                                required />
-                            <label for="st4"></label>
-                            <input type="checkbox" class="required" name="rating" id="st3" title="3 stars" value="3"
-                                required />
-                            <label for="st3"></label>
-                            <input type="checkbox" class="required" name="rating" title="2 stars" id="st2" value="2"
-                                required />
-                            <label for="st2"></label>
-                            <input type="checkbox" class="required" name="rating" title="1 star" id="st1" value="1"
-                                crequired hecked />
-                            <label for="st1"></label>
-                            {% elif book.rating == "2" %}
-                            <input type="checkbox" class="required" name="rating" id="st5" title="5 stars" value="5"
-                                required />
-                            <label for="st5"></label>
-                            <input type="checkbox" class="required" name="rating" id="st4" title="4 stars" value="4"
-                                required />
-                            <label for="st4"></label>
-                            <input type="checkbox" class="required" name="rating" id="st3" title="3 stars" value="3"
-                                required />
-                            <label for="st3"></label>
-                            <input type="checkbox" class="required" name="rating" title="2 stars" id="st2" value="2"
-                                required checked />
-                            <label for="st2"></label>
-                            <input type="checkbox" class="required" name="rating" title="1 star" id="st1" value="1"
-                                required checked />
-                            <label for="st1"></label>
-                            {% elif book.rating == "3" %}
-                            <input type="checkbox" class="required" name="rating" id="st5" title="5 stars" value="5"
-                                required />
-                            <label for="st5"></label>
-                            <input type="checkbox" class="required" name="rating" id="st4" title="4 stars" value="4"
-                                required />
-                            <label for="st4"></label>
-                            <input type="checkbox" class="required" name="rating" id="st3" title="3 stars" value="3"
-                                required checked />
-                            <label for="st3"></label>
-                            <input type="checkbox" class="required" name="rating" title="2 stars" id="st2" value="2"
-                                required checked />
-                            <label for="st2"></label>
-                            <input type="checkbox" class="required" name="rating" title="1 star" id="st1" value="1"
-                                required checked />
-                            <label for="st1"></label>
-                            {% elif book.rating == "4" %}
-                            <input type="checkbox" class="required" name="rating" id="st5" title="5 stars" value="5"
-                                required />
-                            <label for="st5"></label>
-                            <input type="checkbox" class="required" name="rating" id="st4" title="4 stars" value="4"
-                                required checked />
-                            <label for="st4"></label>
-                            <input type="checkbox" class="required" name="rating" id="st3" title="3 stars" value="3"
-                                required checked />
-                            <label for="st3"></label>
-                            <input type="checkbox" class="required" name="rating" title="2 stars" id="st2" value="2"
-                                required checked />
-                            <label for="st2"></label>
-                            <input type="checkbox" class="required" name="rating" title="1 star" id="st1" value="1"
-                                required checked />
-                            <label for="st1"></label>
-                            {% elif book.rating == "5" %}
-                            <input type="checkbox" class="required" name="rating" id="st5" title="5 stars" value="5"
-                                required checked />
-                            <label for="st5"></label>
-                            <input type="checkbox" class="required" name="rating" id="st4" title="4 stars" value="4"
-                                required checked />
-                            <label for="st4"></label>
-                            <input type="checkbox" class="required" name="rating" id="st3" title="3 stars" value="3"
-                                required checked />
-                            <label for="st3"></label>
-                            <input type="checkbox" class="required" name="rating" title="2 stars" id="st2" value="2"
-                                required checked />
-                            <label for="st2"></label>
-                            <input type="checkbox" class="required" name="rating" title="1 star" id="st1" value="1"
-                                required checked />
-                            <label for="st1"></label>
-                            {% else %}
-
-                            <input type="checkbox" class="required" name="rating" title="1 star" id="st1" value="1"
-                                required />
-                            <label for="st1"></label>
-                            <input type="checkbox" class="required" name="rating" title="2 stars" id="st2" value="2"
-                                required />
-                            <label for="st2"></label>
-                            <input type="checkbox" class="required" name="rating" id="st3" title="3 stars" value="3"
-                                required />
-                            <label for="st3"></label>
-                            <input type="checkbox" class="required" name="rating" id="st4" title="4 stars" value="4"
-                                required />
-                            <label for="st4"></label>
-                            <input type="checkbox" class="required" name="rating" id="st5" title="5 stars" value="5"
-                                required />
-                            <label for="st5"></label>
-
-
-                            {% endif %}
-
+                            {% include "edit-rating-temp.html" %}
+                    
                         </div>
-
+                    
                     </div>
 
 
