--- a/templates/individual-reviews.html
+++ b/templates/individual-reviews.html
@@ -14,18 +14,22 @@
     </div>
   </nav>
   <div class="col m12 l5 xl4 center">
-    <img class="book-review-image" src={{ind_book.image}}>
+    <img class="book-review-image" src={{ind_book.image}} alt="Book cover for {{ind_book.title}}">
 
     {% include "rating-template.html" %}
     
     <div class="center">
-      <p>Revied by {{ind_book.created_by}}</p>
-     {% for category in ind_book.category_name %}
+      <p>Reviewed by {{ind_book.created_by}}</p>
+      
+     {% for category in ind_book.category_name  %}
+     
      <div class="chip">
       {{category}}
       </div>
+      
       {% endfor %}
-     
+      
+      
     </div>
 
   </div>
