Add option to add featured review By creating superusers, I've set up the option to add a featured review on the users profile, if they're a superuser

--- a/static/css/dark-mode.css
+++ b/static/css/dark-mode.css
@@ -54,6 +54,10 @@
     background-color: #393C56;
   }
 
+  .review-container {
+    background-color: #393C56;
+  }
+
   footer.page-footer {
     background-color: #81B29A;
   }
