--- a/templates/add_review.html
+++ b/templates/add_review.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "general-templates/base.html"  %}
 
 {% block title %} Add Review | Horror House {% endblock %}
 
@@ -25,7 +25,7 @@
                 <div class="row">
                     <div class="input-field col s6 l6">
                         <input id="affiliate" type="url" name="affiliate" class="validate tooltipped"
-                            data-position="bottom" data-tooltip="Please add an affiliate link from a bookseller"
+                            data-position="bottom" data-tooltip="Please add a link to a bookseller"
                             required>
                         <label for="affiliate">Add bookseller link</label>
                     </div>
