--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "general-templates/base.html"  %}
 {% block title %} {{category.category_name}} | Horror House {% endblock %}
 
 {% block main_heading %} {{category.category_name}} {% endblock %}
