--- a/templates/individual-reviews.html
+++ b/templates/individual-reviews.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "general-templates/base.html"  %}
 {% block title %} {{ind_book.title}} | Horror House {% endblock %}
 
 {% block content %}
