--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,8 +1,8 @@
-{% extends "base.html" %}
+{% extends "general-templates/base.html" %}
 
 {% block title %} {{username}}'s Profile | Horror House {% endblock %}
 
-{% block main_heading %} {{username}}'s Profile {% endblock %}
+
 
 {% block content %}
 
@@ -21,7 +21,7 @@
       </ul>
       <div id="main-info" class="col s12 review-container">
         <div class="center">
-          <h3>Horror House reviewer {{username}}</h3>
+          <h3 class="custom-font">Horror House reviewer {{username}}</h3>
 
           <img src="{{url_for('static', filename='images/pumpkin-avatar.png')}}" class="profile-image"
             alt="Default profile pic">
@@ -47,13 +47,54 @@
 
 
       <div id="add-featured" class="col s12 review-container center">
-        <h3>Managed featured reviews</h3>
+       <h3 class="custom-font">Manage Featured Reviews</h3>
         <div>
-          <a href="{{ url_for('add_featured') }}" class="btn-large waves-effect waves-dark lighten-1 btn-styles">
+          <a href="{{ url_for('add_featured') }}" class="btn-large waves-effect waves-dark lighten-1 btn-styles featured-btn">
             Create review
           </a>
         </div>
 
+        
+        
+        <div class="splide">
+          <div class="splide__track">
+            <ul class="splide__list">
+              {% for featured in featured %}
+              <li class="splide__slide">
+                
+                <div class="card large card-colour">
+                  <div class="card-image">
+                    
+                    <img src={{featured.image}} alt="Book title for {{featured.title}}">
+      
+                  </div>
+                  <div class="card-content center">
+                    <p class="mobile-review-card">{{featured.title}}
+                      <br>
+                      by {{featured.author}}
+                    </p>
+                    <br>
+                    <div class="center review-btn-position">
+                      <a href="{{ url_for('featured', featured_books_id=featured._id) }}"
+                        class="btn-large waves-effect waves-dark lighten-1 btn-styles btn-edit">
+                        Edit/Delete
+                      </a>
+                    </div>
+                    
+                  </div>
+      
+                </div>
+                
+              </li>
+              {% endfor %}
+            </ul>
+          </div>
+        </div>
+        
+      
+       
+        
+      
       </div>
       
     </div>
@@ -113,6 +154,9 @@
     </div>
     </div>
 
+{% endblock %}
 
-
+{% block splide_js %}
+<script src="{{ url_for('static', filename='js/splide.js') }}"></script>
+<script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/js/splide.min.js"></script>
 {% endblock %}
