--- a/templates/featured-reviews.html
+++ b/templates/featured-reviews.html
@@ -17,7 +17,7 @@
 
   <div class="col m6 l5 xl4 center">
     <img class="book-review-image" src={{featured.image}}>
-    {% include "featured-rating-temp.html" %}
+    {% include "components/featured-rating-temp.html" %}
 
     <div class="center">
       <p>Reviewed by {{featured.created_by}}</p>
