--- a/templates/individual-reviews.html
+++ b/templates/individual-reviews.html
@@ -16,7 +16,7 @@
   <div class="col m12 l5 xl4 center">
     <img class="book-review-image" src={{ind_book.image}} alt="Book cover for {{ind_book.title}}">
 
-    {% include "rating-template.html" %}
+    {% include "components/rating-template.html" %}
     
     <div class="center">
       <p>Reviewed by {{ind_book.created_by}}</p>
