--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -77,7 +77,7 @@
                         <br>
                         <!-- <label>Rate (Optional)</label> -->
                         <div class="star-input rate-padding required">
-                            {% include "edit-rating-temp.html" %}
+                            {% include "components/edit-rating-temp.html" %}
                     
                         </div>
                     
