--- a/templates/profile.html
+++ b/templates/profile.html
@@ -45,57 +45,14 @@
         </form>
       </div>
 
+      {% if session.user|lower == "admin"|lower %}
+      {% include "components/add-edit.html" %}
+      {% endif %}
 
-      <div id="add-featured" class="col s12 review-container center">
-       <h3 class="custom-font">Manage Featured Reviews</h3>
-        <div>
-          <a href="{{ url_for('add_featured') }}" class="btn-large waves-effect waves-dark lighten-1 btn-styles featured-btn">
-            Create review
-          </a>
-        </div>
-
-        
-        
-        <div class="splide">
-          <div class="splide__track">
-            <ul class="splide__list">
-              {% for featured in featured %}
-              <li class="splide__slide">
-                
-                <div class="card large card-colour">
-                  <div class="card-image">
-                    
-                    <img src={{featured.image}} alt="Book title for {{featured.title}}">
+      {% if session.user|lower == "cmk416"|lower %}
+      {% include "components/add-edit.html" %}
+      {% endif %}
       
-                  </div>
-                  <div class="card-content center">
-                    <p class="mobile-review-card">{{featured.title}}
-                      <br>
-                      by {{featured.author}}
-                    </p>
-                    <br>
-                    <div class="center review-btn-position">
-                      <a href="{{ url_for('featured', featured_books_id=featured._id) }}"
-                        class="btn-large waves-effect waves-dark lighten-1 btn-styles btn-edit">
-                        Edit/Delete
-                      </a>
-                    </div>
-                    
-                  </div>
-      
-                </div>
-                
-              </li>
-              {% endfor %}
-            </ul>
-          </div>
-        </div>
-        
-      
-       
-        
-      
-      </div>
       
     </div>
   </div>
