--- a/templates/components/add-edit.html
+++ b/templates/components/add-edit.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div id="add-featured" class="col s12 review-container center">
-    <h3 class="custom-font">Manage Featured Reviews</h3>
+    <h3 class="custom-font manage-featured">Manage Featured Reviews</h3>
      <div>
        
        <a href="{{ url_for('add_featured') }}" class="btn-large waves-effect waves-dark lighten-1 btn-styles featured-btn">
