--- a/templates/add_featured.html
+++ b/templates/add_featured.html
@@ -81,13 +81,13 @@
                 </div>
                 <div class="row">
                     <div class="col l6 center">
-                        <button class="btn-large waves-effect waves-dark lighten-1 btn-styles" type="submit">
+                        <button class="btn-large add-edit-btn waves-effect waves-dark lighten-1 btn-styles" type="submit">
                             Create review
                         </button>
                     </div>
 
                     <div class="col l6 center">
-                        <a class="btn-large waves-effect waves-dark lighten-1 btn-styles blue-grey modal-trigger"
+                        <a class="btn-large add-edit-btn waves-effect waves-dark lighten-1 btn-styles blue-grey modal-trigger"
                             href="#cancel-modal1">Cancel
                         </a>
                         <div id="cancel-modal1" class="modal teal lighten-4">
