--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -88,7 +88,7 @@
 
                 <div class="row">
                     <div class="col l4 center">
-                        <button class="btn-large waves-effect waves-dark lighten-1 btn-styles center"
+                        <button class="btn-large add-edit-btn waves-effect waves-dark lighten-1 btn-styles center"
                             type="submit">Update
                         </button>
 
@@ -96,7 +96,7 @@
 
 
                     <div class="col l4 center">
-                        <a class="btn-large waves-effect waves-dark lighten-1 btn-styles modal-trigger blue-grey center"
+                        <a class="btn-large add-edit-btn waves-effect waves-dark lighten-1 btn-styles modal-trigger blue-grey center"
                             href="#cancel-modal1">Cancel
                         </a>
                         <div id="cancel-modal1" class="modal teal lighten-4">
@@ -114,7 +114,7 @@
                     </div>
                     <div class="col l4 center">
                         <a href="#delete-modal1"
-                            class="btn-large waves-effect waves-dark lighten-1 btn-delete btn-styles modal-trigger">
+                            class="btn-large add-edit-btn waves-effect waves-dark lighten-1 btn-delete btn-styles modal-trigger">
                             Delete
                         </a>
 
