--- a/templates/book-reviews.html
+++ b/templates/book-reviews.html
@@ -50,7 +50,7 @@
 
   <div class="review-container">
 
-    <h2 class="center">Read the latest reviews</h2>
+    <h2 class="center review-heading">Read the latest reviews</h2>
 
     {% for category in categories %}
    
