--- a/templates/components/add-edit.html
+++ b/templates/components/add-edit.html
@@ -2,6 +2,8 @@
 {% block content %}
 
 <div id="add-featured" class="col s12 review-container center">
+
+  <div class="manage-featured-padding">
     <h3 class="custom-font manage-featured">Manage Featured Reviews</h3>
      <div>
        
@@ -10,6 +12,7 @@
        </a>
        <br>
      </div>
+    </div>
 
      
      <div>
