--- a/templates/profile.html
+++ b/templates/profile.html
@@ -11,7 +11,7 @@
     <div class="overflow-review">
       <ul id="tabs-swipe-demo" class="tabs breadcrumb-background">
         <li class="tab col s3"><a class="active" href="#main-info">Main Info</a></li>
-        <li class="tab col s3"><a href="#update-info">Update info</a></li>
+        <li class="tab col s3"><a href="#update-info">Update</a></li>
         {% if session.user|lower == "admin"|lower %}
         <li class="tab col s3"><a href="#add-featured">Featured</a></li>
         {% elif session.user|lower == "cmk416"|lower %}
@@ -20,7 +20,7 @@
         
       </ul>
       <div id="main-info" class="col s12 review-container">
-        <div class="center">
+        <div class="center main-info-padding">
           <h3 class="custom-font">Horror House reviewer {{username}}</h3>
 
           <img src="{{url_for('static', filename='images/pumpkin-avatar.png')}}" class="profile-image"
@@ -29,8 +29,11 @@
         </div>
       </div>
 
-      <div id="update-info" class="col s12 review-container">
-        <form method="POST" action="{{ url_for('change_password') }}">
+
+      <div id="update-info" class="col s12 review-container center">
+        
+        <h3 class="custom-font manage-featured">Update your password</h3>
+        <form method="POST" action="{{ url_for('change_password') }}" class="update-form-padding">
           <div class="row">
             <div class="input-field col s12">
               <i class="material-icons prefix login-icon-light">account_box</i>
