--- a/templates/add_review.html
+++ b/templates/add_review.html
@@ -79,14 +79,14 @@
                     </div>
 
                 </div>
-                <div class="row">
-                    <div class="col l6 center">
+                <div class="row add-button-padding">
+                    <div class="col s6 l6 center">
                         <button class="btn-large add-edit-btn waves-effect waves-dark lighten-1 btn-styles" type="submit">
                             Create review
                         </button>
                     </div>
 
-                    <div class="col l6 center">
+                    <div class="col s6 l6 center">
                         <a class="btn-large add-edit-btn waves-effect waves-dark lighten-1 btn-styles blue-grey modal-trigger"
                             href="#cancel-modal1">Cancel
                         </a>
