--- a/templates/add_featured.html
+++ b/templates/add_featured.html
@@ -79,7 +79,7 @@
                     </div>
 
                 </div>
-                <div class="row">
+                <div class="row add-button-padding">
                     <div class="col l6 center">
                         <button class="btn-large add-edit-btn waves-effect waves-dark lighten-1 btn-styles" type="submit">
                             Create review
