--- a/templates/edit_featured.html
+++ b/templates/edit_featured.html
@@ -86,8 +86,8 @@
 
                 </div>
 
-                <div class="row">
-                    <div class="col l4 center">
+                <div class="row edit-button-padding ">
+                    <div class="col s4 l4 center">
                         <button class="btn-large add-edit-btn  waves-effect waves-dark lighten-1 btn-styles center"
                             type="submit">Update
                         </button>
@@ -95,7 +95,7 @@
                     </div>
 
 
-                    <div class="col l4 center">
+                    <div class="col s4 l4 center">
                         <a class="btn-large add-edit-btn waves-effect waves-dark lighten-1 btn-styles modal-trigger blue-grey center"
                             href="#cancel-modal1">Cancel
                         </a>
@@ -112,7 +112,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col l4 center">
+                    <div class="col s4 l4 center">
                         <a href="#delete-modal1"
                             class="btn-large waves-effect waves-dark lighten-1 btn-delete btn-styles add-edit-btn modal-trigger">
                             Delete
